# Xihe

./: .gitmodules  CMakeLists.txt
shaders/: hzb.comp
shaders/deferred/: geometry_indirect.frag  geometry_indirect.mesh  geometry_indirect.task  geometry_lod.frag  geometry_lod.mesh  geometry_lod.task  geometry_mesh.mesh  geometry_mesh.task  lighting.frag  lighting_unshadow.frag  occlusion.mesh  occlusion.task  occlusion_preparation.comp
shaders/hzb/: copy.comp  mipmap.comp
shaders/mesh_shading/: cluster_culling.comp  geometry_mesh.frag  geometry_mesh.vert  instance_culling.comp  mesh.h  prepare_mesh_draws.comp
xihe/: CMakeLists.txt  gpu_lod_scene.cpp  gpu_lod_scene.h  gpu_scene.cpp  gpu_scene.h  page_table.cpp  page_table.h  sample_app.cpp  sample_app.h  test_app.cpp  virtual_texture.h  xihe_app.cpp  xihe_app.h
xihe/backend/: allocated.cpp  allocated.h  allocated_sparse.cpp  allocated_sparse.h  buffer.cpp  buffer.h  buffer_pool.h  buffer_sparse.cpp  buffer_sparse.h  command_buffer.cpp  command_buffer.h  device.cpp  device.h  image.cpp  image.h  image_view.cpp  image_view.h  vulkan_resource.h
xihe/common/: serialize.h
xihe/platform/: filesystem.cpp
xihe/rendering/: render_context.cpp  render_context.h  render_frame.cpp  render_frame.h
xihe/rendering/passes/: cluster_culling.cpp  cluster_culling.h  copy_pass.cpp  copy_pass.h  geometry_mesh_pass.h  (+23 more)
xihe/scene_graph/: geometry_data.h  gltf_loader.cpp  gltf_loader.h  script.cpp  script.h
xihe/stats/: frame_time_provider.h  stats_common.h  stats_provider.cpp  vulkan_stats_provider.cpp  vulkan_stats_provider.h
(+30 files in other folders)
